--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "nanoid": "^5.1.5",
     "next-themes": "^0.4.6",
     "openai": "^6.9.1",
+    "pdf-lib": "^1.17.1",
     "pdf-parse": "^2.4.5",
     "pdf-to-png-converter": "^3.11.0",
     "pdfjs-dist": "^5.4.394",
