--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "check": "tsc --noEmit",
     "format": "prettier --write .",
     "test": "vitest run",
+    "test:audit": "vitest run server/calculationEngineAudit.test.ts",
+    "precheck": "vitest run server/calculationEngineAudit.test.ts && tsc --noEmit",
     "db:push": "drizzle-kit generate && drizzle-kit migrate",
     "db:seed:material-stress": "node seed-material-stress.mjs"
   },
