--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^2.4.5",
     "pdf-to-png-converter": "^3.11.0",
+    "pdf2pic": "^3.2.0",
     "pdfjs-dist": "^5.4.394",
     "pdfkit": "^0.17.2",
     "react": "^19.1.1",
