--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "cmdk": "^1.1.1",
     "cohere-ai": "^7.20.0",
     "cookie": "^1.0.2",
+    "cross-env": "^10.1.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
